# chakravyuh

./: .cursorignore  .envrc  .gitignore  AGENTS.md  Makefile  README.md  SECURITY.md  SETUP_GUIDE.md  config.yaml.example  main.py  openapi.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup-local.sh  setup-prod.sh  setup.py  start-dev.sh  tsconfig.typecheck.json  tsconfig.typecheck.tsbuildinfo
.cursor/: hooks.json
.cursor/hooks/: destructive_shell_guard.py  shell_audit.py  tool_use_audit.py
.cursor/rules/: context-and-honesty.mdc  database-migrations.mdc  high-risk-confirmation.mdc  instruction-precedence.mdc  secrets-and-env.mdc  (+1 more)
api/: search_api.py
backend/: .env.example  Makefile  README.md  config.example.yaml  openapi.yaml  requirements.txt
config/: aws_services.yaml  config.example.yaml
connectors/: aws_scraper.py
docker-prod/: .env copy.example  README.md  backend.Dockerfile  config-docker.example.yaml  docker-compose.yml  entrypoint.sh  frontend.Dockerfile  ollama.Dockerfile
docker_services/: pg.docker-compose.yaml
docs/: DFD.md  HLD.md  LLD.md  README.md
frontend/: .env.example  .eslintrc.json  README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
ingestion/: erd_ingestion.py  langchain_ingestion.py
qa/: qa_chain.py
rag_retriever/: retriever.py
scripts/: aws_services_manager.py  cleanup.py  fix_imports.py  generate_erd_pdf.py  migrate_imports.py
tests/: conftest.py
utils/: config_loader.py  tokenizer.py  url_utils.py
vectorstores/: pgvector_store.py
(+105 files in other folders)
